--- a/scss/index.scss
+++ b/scss/index.scss
@@ -137,7 +137,7 @@ h1 {
     outline: none;
     font-size: 18px;
     color: #4d4d4d;
-    height: 50px;
+    min-height: 50px;
     border-radius: 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #fff;
@@ -150,6 +150,8 @@ h1 {
       margin-left: 18px;
       transition: all 0.3s ease;
       user-select: none;
+      word-break: break-all;
+      line-height: 1.7;
 
       &-done {
         text-decoration: line-through;
@@ -162,14 +164,14 @@ h1 {
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 29px;
+      min-width: 29px;
       height: 29px;
       border: 1px solid rgba(0, 0, 0, 0.3);
       border-radius: 20px;
       margin-left: 4px;
     }
 
-    input {
+    .checkbox__list {
       display: none;
     }
 
@@ -207,12 +209,30 @@ h1 {
         pointer-events: none;
         user-select: none;
       }
+
+      &-hide {
+        display: none;
+      }
     }
 
     &:hover {
       .delete {
         opacity: 1;
       }
+    }
+
+    .input-change {
+      font-family: Roboto;
+      outline: none;
+      margin-left: 16px;
+      font-size: 18px;
+      color: #4d4d4d;
+      background-color: #f6f6f6;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      width: 480px;
+      height: 40px;
+      box-shadow: 1px 1px 1px rgb(0 0 0 / 15%);
     }
   }
 }
@@ -274,6 +294,11 @@ h1 {
   &__clearall {
     color: #4d4d4d;
     cursor: pointer;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: rgba(175, 47, 47, 0.5);
+    }
   }
 
   &-hide {
